cmake_minimum_required(VERSION 3.8)
project(DUPa)
set(EXECUTABLE ${PROJECT_NAME})
add_subdirectory(SFML)
include_directories(SFML/include)
add_executable(${EXECUTABLE} ElienVader.cpp)
set(SFML_DIR SFML-build)
find_package(SFML 2 REQUIRED network audio graphics window system)
target_link_libraries(${EXECUTABLE} sfml-graphics sfml-audio)
target_include_directories(${EXECUTABLE} PUBLIC ${SFML_INCLUDE_DIR})

