cmake_minimum_required(VERSION 3.8)
project(DUPa)
set(EXECUTABLE ${PROJECT_NAME})
add_subdirectory(SFML)
include_directories(SFML/include)
file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true code/*.h code/*.cpp)
add_executable(${EXECUTABLE} ${SOURCES})
set(SFML_DIR SFML-build)
find_package(SFML 2 REQUIRED network audio graphics window system)
target_link_libraries(${EXECUTABLE} sfml-graphics sfml-window sfml-system)
target_include_directories(${EXECUTABLE} PUBLIC ${SFML_INCLUDE_DIR})